<resources>
    <string name="app_name">Home Service</string>
    <string name="google_maps_key" />
    <string name="launch_map_picker" translatable="false">LAUNCH MAP LOCATION PICKER ACTIVITY</string>
    <string name="launch_legacy_map_picker" translatable="false">LAUNCH LEGACY MAP LOCATION ACTIVITY</string>
    <string name="launch_map_picker_with_pois" translatable="false">LAUNCH MAP WITH POIS</string>
    <string name="launch_map_picker_with_style" translatable="false">LAUNCH MAP WITH STYLE</string>
    <string name="press_once_again_to_exit">pree once again to exit</string>
    <string name="ok">ok</string>
    <string name="app_title">Home Service</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mainpage">Home Page</string>
    <string name="settings">Settings</string>
    <string name="about_application">About Application</string>
    <string name="signout">Logout</string>
    <string name="services">Services</string>
    <string name="image_desc">image</string>
    <string name="user_info">البيانات الشخصية</string>
    <string name="previes_experience">الخبرات السابقة</string>
    <string name="contact">جهات الاتصال</string>
    <string name="about_me">نبذة عنى</string>
    <string name="see_all">عرض المزيد</string>
    <string name="pojo_desc">غالباً ما تكون السيرة الذاتية قصيرة (عادة صفحة واحدة)، وبالتالي لا تتضمن سوى خبرات ذات صلة مباشرة بمنصب معين. تحتوي العديد من السير الذاتية علي كلمات جوهرية (keywords) دقيقة يتطلع لها صاحب العمل المحتمل، كما تُستخدم فيها الأفعال بكثافة، ويُعرض محتواها بطريقة انسيابية.  سابقا كانت السير الذاتية لا تتعدى الصفحتين حيث لا يكرس أصحاب العمل المحتملين الكثير من الوقت لقراءة تفاصيل السيرة الذاتية لكل متقدم. غير أصحاب العمل في بعض البلدان وجهة نظرهم فيما يتعلق بالطول المقبول للسيرة الذاتية. بما أن أعدادًا متزايدة من الباحثين عن عمل وأصحاب العمل يستخدمون محركات البحث عن عمل عبر الإنترنت لإيجاد فرص العمل وشغل الوظائف، دعت الحاجة إلى سير ذاتية أطول للتفريق والتمييز بين المتقدمين، كما أصبحت السير الذاتية التي يزيد طولها عن صفحتين أكثر قبولاً عند أصحاب العمل الكثير من المتخصصين في كتابة السيرة الذاتية والموارد البشرية يؤمنون أن السيرة الذاتية يجب أن تأخذ كفايتها من الطول لتعطي وصفًا موجزًا، وكافيًا، ودقيقًا للتاريخ الوظيفي للمتقدم ومهاراته. ازدادت شعبية انتقال السير الذاتية مباشرة لأصحاب العمل في أواخر عام 2002. وتمكن الباحثون عن عمل من الاطلاع على سير استمارة طلب الوظيفة والتواصل مع أصحاب العمل عبر الاتصال المباشر بالبريد الإلكتروني وتفجير السيرة الذاتية، وهو مصطلح يعني التوزيع الهائل للسير الذاتية لزيادة وضوح الشخصية داخل سوق العمل إلا أن التوزيع الهائل للسير الذاتية قد يكون له تأثير سلبي على فرص المتقدمين في الحصول على التوظيف الآمن حيث أنها لا تميل إلى كونها مصممة خصيصًا لشغل الوظائف المحددة التي تقدم لها طالب العمل.لذلك فإنه عادة ما يكون تعديل السيرة الذاتية وفقًا للوظيفة المُتَقَدَّم لها أكثر معقولية.  التعقيد والبساطة في تنسيق مختلف السير الذاتية يؤدي إلى الإسفار عن نتائج مختلفة من شخص لآخر لشغل المنصب وللصناعة. ومن المهم الإشارة إلى أن السير الذاتية التي يستخدمها أصحاب المهن الطبية، والأساتذة، والفنانين وأصحاب العديد من المجالات المتخصصة قد تكون طويلة نسبيًا. فعلى سبيل المثال، السيرة الذاتية للفنانين يُستبعد فيها عادةً الأعمال غير الفنية، ويمكن أن تشمل قوائم طويلة من المعارض الجماعية والمنفردة (معرض فردي).</string>
    <string name="collapse_text_label">اظهر اقل</string>
    <string name="expand_text_label">اظهر المزيد</string>
    <string name="profile_page">بيانات مقدم الخدمة</string>
    <string name="Reviews">التقييمات</string>
    <string name="edit">تعديل</string>
    <string name="version">الاصدار</string>
    <string name="rate">التقييم</string>
    <string name="if_you_like_the_app_please_do_rate_it">اذا اعجبك التطبيق فبرجاء المساهمة فى نشرة عن طريق تقييمة</string>
    <string name="changelog">التعديلات</string>
    <string name="licenses">التراخيص</string>
    <string name="developer">عن المطور</string>
    <string name="mohamed_elsayed">محمد السيد</string>
    <string name="toukh_qal">طوخ - القليوبية - مصر</string>
    <string name="view_facebook">عرض الفيسبوك</string>
    <string name="phonedev">01277637646</string>
    <string name="follow_on_twitter">المتابعة على تويتر</string>
    <string name="more_apps">برامج اخرى للمطور</string>
    <string name="dark_mode">الوضع الداكن</string>
    <string name="language">تغيير اللغة</string>
    <string name="theme">التصميم</string>
    <string name="orders">ألطلبات</string>
    <string name="complain">ألشكاوى</string>
    <string name="failed_to_connect">فشل الاتصال بالانترنت</string>
    <string name="check_network">من فضلك تحقق من الاتصال بالانترنت</string>
    <string name="try_again">حاول مرة اخرى</string>
    <string name="loading">حارى التحميل</string>
    <string name="user_name">اسم المستخدم</string>
    <string name="password">كلمة المرور</string>
    <string name="remember_me">تذكرنى</string>
    <string name="sign_in">تسجيل الدخول</string>
    <string name="still_don_t_have_account">ليس لديك حساب ؟</string>
    <string name="sign_up">تسجيل جديد</string>
    <string name="enter_valid_password">كلمة المرور غير صالحة</string>
    <string name="password_should_longer_than_six">كلمة المرور يجب الا تقل عن 6 احرف</string>
    <string name="enter_valid_email">برجاء ادخال بريد الكترونى صالح</string>
    <string name="email">البريد الالكترونى</string>
    <string name="create_agent">انشاء حساب مقدم خدمة</string>
    <string name="create_customer">انشاء حساب عميل</string>
    <string name="conf_password">تاكيد كلمة المرور</string>
    <string name="already_have_an_account">لديك حساب ؟</string>
    <string name="person_name">اسم المستخدم</string>
    <string name="avaiable_plan">خطة الاشتراك المتاحة</string>
    <string name="idnumber">رقم الهوية</string>
    <string name="city">المدينة</string>
    <string name="pogo_cat_cleaning">خدمات النظافة</string>
    <string name="pogo_cat_elec">خدمات السباكة والكهرباء</string>
    <string name="pogo_cat_decor">خدمات الديكورات وورق الجدران والباركية</string>
    <string name="pogo_cat_water">خدمات المياة</string>
    <string name="pogo_cat_sata">خدمات الستالايت</string>
    <string name="pogo_cat_fur">خدمات الأثاث</string>
    <string name="pogo_cat_window">خدمات السواتر والعوازل</string>
    <string name="pogo_cat_inprogress">خدمات قيد البناء</string>
    <string name="pogo_cat_hdevices">خدمات الاجهزة المنزلية</string>
    <string name="soon">قريبا</string>
    <string name="pojo_blkfactory">مصانع البلك</string>
    <string name="pojo_metalfactory">مصانع الحديد</string>
    <string name="pojo_paint">الدهانات</string>
    <string name="pojo_almu">مصانع الالمونيوم والحدادة</string>
    <string name="pojo_blat">مصانع البلاط</string>
    <string name="pojo_engi_office">المكاتب الهندسية</string>
    <string name="pojo_lightingfac">مؤسسات الانارة</string>
    <string name="pojo_cementfactory">مصانع الاسمنت</string>
    <string name="services_inprogress">خدمات قيد البناء</string>
    <string name="checked">تم اختيار</string>
    <string name="unchecked">تم الغاء الاختيار</string>
    <string name="choose_serives">اختر نوع الخدمة</string>
    <string name="we_ensure">نحن نضمن</string>
    <string name="btncontinue">متابعة</string>
    <string name="raring">تقييم</string>
    <string name="comments">تعليقات</string>
    <string name="cost_per_hour">تكلفة الساعة</string>
    <string name="currency">ر.س</string>
    <string name="distance">المسافة</string>
    <string name="km">كم</string>
    <string name="desc">التفاصيل</string>
    <string name="btn_orderjob">طلب الخدمة</string>
    <string name="agents_details">بيانات مقدم الخدمة</string>
    <string name="exper_years">عدد سنوات الخبرة</string>
    <string name="years">سنة</string>
    <string name="choose_servies_time">اختر وقت الزيارة المفضل</string>
    <string name="api_key">AIzaSyCO0w_ttHX8NhEZArythjJuiUY1ouN2sVI</string>
    <string name="current_location">موقعك الحالى</string>
    <string name="current_appartment">عنوان الشقة او المنزل</string>
    <string name="search_address">البحث عن عنوان</string>
    <string name="no_address">عنوان غير صالح</string>
    <string name="select_address">تحديد الموقع</string>
    <string name="pay_method">طرق الدفع</string>
    <string name="cash">نقدى</string>
    <string name="expected_reach_date">وقت الوصول المتوقع</string>
    <string name="servies_provider">مزود الخدمة</string>
    <string name="order_details">تفاصيل الطلب</string>
    <string name="lowest_provider_cost">الحد الادنى للمزود</string>
    <string name="minimum_cost_notify">الحد الادنى للمزود هو اقل قيمة يتم دفعها لمزود الخدمة فى الزيارة ويتم احتسابها فقط عند وصول مجموع الخدمات المختارة للحد الادنى</string>
    <string name="order_view">متابعة الطلب</string>
    <string name="vat_un_included">ضريبة القيمة المضافة غير مشمولة</string>
    <string name="additional_comments">اى تعليقات اضافية ؟</string>
    <string name="write_comment_here">اكتب تعليقك هنا</string>
    <string name="parts">قطع الغيار</string>
    <string name="parts_info">تسعيرة العميل تشمل فقط عمل اليد</string>
    <string name="unordinery_jobs">الاعمال غير الاعتيادية</string>
    <string name="unordinery_jobs_info">التسعيرة لا تشمل الاعمال الغير اعتيادية</string>
    <string name="please_order">تنفيذ الطلب</string>
    <string name="continue_order">متابعة الطلب</string>
    <string name="services_ensure">ضمان على الخدمة</string>
    <string name="ensure_days">حتى 30 يوم من تاريخ انتهاء الخدمة</string>
    <string name="customer_response">رضا العملاء</string>
    <string name="customer_response_rating">متوسط تقييم رضا عملاؤنا هو 4.5 من اصل 5</string>
    <string name="happy_customer">مركز سعادة العملاء</string>
    <string name="pf_servies_provider">مزودى خدمات معتمدين</string>
    <string name="servies_provider_choose">اختر مزود الخدمة</string>
    <string name="lowest_agent">الحد الادنى للعميل :</string>
    <string name="agent_note">المزود يمكنة تنفيد جميع الاعمال المختلفة</string>
    <string name="payment_method">طرق الدفع :</string>
    <string name="order_info">ملخص الطلب</string>
    <string name="primary_bill">الفتورة المبدائية</string>
    <string name="minimum_cost">لا يشمل الحد الادنى لمزود الخدمة</string>
    <string name="btncancelorder">الغاء الطلب</string>
    <string name="thanks_for_shopping_with_us">"شكرا لتسوقك معنا "</string>
    <string name="your_order_number">رقم الطلب الخاص بك </string>
    <string name="view_order_details">عرض تفاصيل الطلب</string>
    <string name="continue_shopping">متابعة التسوق</string>
    <string name="somethinghapping">حدث خطا اثناء تنفيذ طلبك</string>
    <string name="please_try_again_later">برجاء المحاولة مرة اخرى</string>
    <string name="we_provide">نحن نوفر</string>
    <string name="my_profile">الملف الشخصى</string>
    <string name="contact_us">اتصل بنا</string>
    <string name="requests">الطلبات</string>
    <string name="our_goal">هدفنا</string>
    <string name="lorem_pojo"><![CDATA[هناك حقبة مثبتة منذ زمن طويل وهى ان المحتوى المقروء لصفحة ما يحتوى سيلهى القارىء عن التركيز على الشكل الخارجى هناك حقيقة مثبتة منذ زمن طويل <هناك حقبة مثبتة منذ زمن طويل وهى ان المحتوى المقروء لصفحة ما يحتوى سيلهى القارىء عن التركيز على الشكل الخارجى هناك حقيقة مثبتة منذ زمن طويل<هناك حقبة مثبتة منذ زمن طويل وهى ان المحتوى المقروء لصفحة ما يحتوى سيلهى القارىء عن التركيز على الشكل الخارجى هناك حقيقة مثبتة منذ زمن طويل]]></string>
    <string name="contact_details">محتوى التواصل</string>
    <string name="write_content">اكتب المحتوى</string>
    <string name="send">ارسال</string>
    <string name="country">البلد</string>
    <string name="_city">المدينة</string>
    <string name="category_sort">تصنيف الخدمات</string>
    <string name="search">بحث</string>
    <string name="message">اكتب رسالة .....</string>
    <string name="telephone">رقم الجوال</string>
    <string name="log_out">تسجيل الخروج</string>
    <string name="full_name">الاسم بالكامل</string>
    <string name="email_id">البريد الالكترونى</string>
    <string name="com_title">عنوان الشكوى</string>
</resources>