<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    android:id="@+id/eContent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">




    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/relLayoutParent">


        <!-- top toolbar -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/relLayout1">

            <include layout="@layout/layout_top_tabs"/>

        </RelativeLayout>

        <!-- Middle section (body) -->
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/relLayout2"
            android:layout_below="@+id/relLayout1">
            <LinearLayout

                android:layout_marginTop="8dp"
                android:id="@+id/contentPanel"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:textAlignment="viewStart"
                    android:inputType="textPersonName"
                    android:id="@+id/contactFullName"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    style="@style/edittext"
                    android:hint="@string/full_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <EditText
                    android:textAlignment="viewStart"
                    android:layout_marginTop="16dp"
                    android:inputType="textEmailAddress"
                    android:id="@+id/contactEmailID"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    style="@style/edittext"
                    android:hint="@string/email_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <EditText
                    android:textAlignment="viewStart"
                    android:layout_marginTop="16dp"
                    android:inputType="phone"
                    android:id="@+id/contactPhone"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    style="@style/edittext"
                    android:hint="@string/telephone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <EditText
                    android:textAlignment="viewStart"
                    android:layout_marginTop="16dp"
                    android:inputType="textNoSuggestions"
                    android:id="@+id/contactTitle"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    style="@style/edittext"
                    android:hint="@string/com_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <EditText
                    android:textAlignment="viewStart"
                    android:layout_marginTop="16dp"
                    android:inputType="text"
                    android:id="@+id/contactMessage"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    style="@style/edittext"
                    android:gravity="start"
                    android:hint="@string/message"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"/>
                <com.rovaindu.homeservice.utils.views.TextViewAr
                    android:id="@+id/btnProcced"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_margin="16dp"
                    android:background="@drawable/buy_button_bg"
                    android:fontFamily="@font/nunito_bold"
                    android:gravity="center"
                    android:text="@string/send"
                    android:textAlignment="center"
                    android:textColor="?android:colorPrimaryDark"
                    android:textSize="18sp" />

            </LinearLayout>



        </ScrollView>

    </RelativeLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>