<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">
        <com.rovaindu.homeservice.utils.views.TextViewAr
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"
            android:paddingBottom="10dp"
            android:text="@string/primary_bill"
            android:textColor="@color/black" />
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/view_width_small"
            android:background="@color/grey_200"
            android:layout_marginTop="1dp"
            android:layout_marginBottom="1dp"/>
        <RelativeLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <androidx.recyclerview.widget.RecyclerView

                android:id="@+id/recServies"
                android:layout_width="match_parent"
                android:nestedScrollingEnabled="false"
                android:padding="@dimen/_4sdp"
                android:layout_height="wrap_content" />


            <View
                android:layout_below="@+id/recServies"
                android:id="@+id/shadowRec"
                android:layout_width="match_parent"
                android:layout_height="@dimen/view_width_small"
                android:background="@color/grey_200"
                android:layout_marginTop="1dp"
                android:layout_marginBottom="1dp"/>



            <com.rovaindu.homeservice.utils.views.TextViewAr
                android:layout_marginTop="8dp"
                android:layout_below="@+id/shadowRec"
                android:id="@+id/vatTXT"
                android:layout_marginStart="2dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vat_un_included"
                android:layout_marginEnd="10dp"
                android:textSize="14sp"
                />
            <LinearLayout
                android:layout_marginTop="8dp"
                android:layout_below="@+id/vatTXT"
                android:id="@+id/providerTXT"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <com.rovaindu.homeservice.utils.views.TextViewAr


                    android:layout_marginStart="2dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/minimum_cost"
                    android:layout_marginEnd="10dp"
                    android:textSize="14sp"
                    />
                <ImageView
                    android:layout_width="12dp"
                    android:layout_height="12dp"
                    app:srcCompat="@drawable/pojo_ic_info" />


            </LinearLayout>


            <com.rovaindu.homeservice.utils.views.TextViewAr
                android:id="@+id/costNotify"
                android:layout_marginTop="2dp"
                android:padding="20dp"
                android:layout_below="@+id/providerTXT"
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_bg_info"
                android:text="@string/minimum_cost_notify"

                android:textSize="14sp"
                />
            <LinearLayout
                android:layout_marginTop="16dp"
                android:layout_below="@id/costNotify"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="6">
                <com.rovaindu.homeservice.utils.views.TextViewAr
                    android:layout_margin="8dp"
                    android:layout_weight="3"
                    android:padding="16dp"
                    android:id="@+id/btnContinue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:background="?android:colorPrimary"
                    android:text="@string/btncontinue"
                    android:elevation="40dp"
                    android:textSize="24sp"
                    android:textColor="?android:colorPrimaryDark"
                    android:textStyle="bold"
                    android:gravity="center"
                    />
                <com.rovaindu.homeservice.utils.views.TextViewAr
                    android:layout_margin="8dp"
                    android:layout_weight="3"
                    android:padding="16dp"
                    android:id="@+id/btnCancel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?android:colorPrimaryDark"
                    android:text="@string/btncancelorder"
                    android:elevation="40dp"
                    android:textSize="24sp"
                    android:textColor="?android:colorPrimary"
                    android:textStyle="bold"
                    android:gravity="center"
                    />
            </LinearLayout>
        </RelativeLayout>

    </LinearLayout>
</RelativeLayout>